--- a/src/app/feature/login/login/login.component.html
+++ b/src/app/feature/login/login/login.component.html
@@ -2,3 +2,48 @@
   Recuerde conservar los id, no deben ser modificados
   ids = login__email, login__password, login__password-error, login__email-error, login__btn-login
 -->
+
+<div class="card">
+  <div class="layout-row justify-content-around align-items-center"></div>
+</div>
+
+<div class="card">
+  <section class="card-text">
+    <h3 class="mt-0 mb-0 block justify-content-center flex mb-15" >Inicio de Sesión</h3>
+    <div class="layout-row justify-content-around align-items-center">
+      <form [formGroup]="loginForm" (submit)="login()">
+        <section class="layout-column align-items-center justify-content-center  mb-10">
+          <input
+            id="login__email"
+            type="email"
+            [ngClass]="getEmail.hasError('required') && getEmail.touched ? 'white large error' : 'white large '"
+            placeholder="Ingrese correo"
+            formControlName="email"
+          />
+          <div class="form-hint error-text mt-5" 
+          id="login__email-error"
+          *ngIf="getEmail.hasError('required') && getEmail.touched">Email is required</div>
+          <div class="form-hint error-text mt-5" *ngIf="getEmail.hasError('email')">Email Invalid</div>
+        </section>
+        <section class="layout-column align-items-center justify-content-center mb-10">
+          <input
+            id="login__password"
+            type="password"
+            [ngClass]="getPassword.hasError('required') && getPassword.touched ? 'white large error' : 'white large '"
+            placeholder="Ingrese contraseña"
+            formControlName="password"
+          />
+          <div class="form-hint error-text mt-5" 
+          id="login__password-error"
+          *ngIf="getPassword.hasError('required') && getPassword.touched">
+            Password is required
+          </div>
+          <div *ngIf="getPassword.hasError('minlength')">The minimun characters will be 8</div>
+        </section>
+        <section class="card-actions block" >
+          <button id="login__btn-login" [disabled]="loginForm.invalid">Iniciar Sesión</button>
+        </section>
+      </form>
+    </div>
+  </section>
+</div>
