--- a/src/app/feature/users/nav-bar/nav-bar.component.html
+++ b/src/app/feature/users/nav-bar/nav-bar.component.html
@@ -2,3 +2,23 @@
   Recuerde conservar los id, no deben ser modificados
   ids = nav-bar__btn-list-user, nav-bar__btn-create-user, nav-bar__btn-logout
 -->
+
+
+<nav class="navbar">
+  <div class="navbar-left">
+    <span class="nav-option" (click)="navigateTo('/list')" id="nav-bar__btn-list-user">
+      <i class="fas fa-home"></i> Usarios
+    </span>
+    <span class="nav-option" (click)="navigateTo('/create')" id="nav-bar__btn-create-user">
+      <i class="fas fa-user"></i> Crear 
+    </span>
+  </div>
+  <div class="navbar-right">
+    <span class="logout-option" (click)="logout()" id="nav-bar__btn-logout">
+      <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
+    </span>
+  </div>
+</nav>
+<div *ngIf="showAlert.isOpen" class="alert" [ngClass]="showAlert.type" >
+  {{showAlert.message}}
+</div>
