--- a/src/app/feature/users/create-user/create-user.component.html
+++ b/src/app/feature/users/create-user/create-user.component.html
@@ -4,34 +4,38 @@
 -->
 <div class="card">
   <section class="card-text">
-    <h3 class="mt-0 mb-0 block" >Nuevo Usuario</h3>
+    <h3 class="mt-0 mb-0 block justify-content-center flex mb-15" >Nuevo Usuario</h3>
     <div class="layout-row justify-content-around align-items-center">
       <form [formGroup]="newUserForm" (submit)="create()">
-        <section class="layout-row align-items-center justify-content-center">
+        <section class="layout-column align-items-center justify-content-center  mb-10">
           <input
             id="user-create__name"
             type="text"
-            class="white large"
+            [ngClass]="showErrorName ? 'white large error' : 'white large '"
             placeholder="Ingrese nombre"
             formControlName="name"
           />
-          <div id="user-create__name-error" *ngIf="getName.hasError('required') && getName.touched">Name is required</div>
+          <div  class="form-hint error-text mt-5"  
+          id="user-create__name-error" 
+          *ngIf="showErrorName">{{errorMessageName}}</div>
         </section>
-        <section class="layout-row align-items-center justify-content-center">
+        <section class="layout-column align-items-center justify-content-center  mb-10">
           <input
             id="user-create__job"
             type="text"
-            class="white large"
+            [ngClass]="showErrorJob ? 'white large error' : 'white large '"
             placeholder="Ingrese el trabajo"
             formControlName="jop"
           />
-          <div id="user-create__job-error" *ngIf="getJop.hasError('required') && getJop.touched">
-            job is required
+          <div id="user-create__job-error" 
+          class="form-hint error-text mt-5" 
+          *ngIf="showErrorJob">
+            {{errorMessageJob}}
           </div>
       
         </section>
-        <section class="card-actions block" >
-          <button id="user-create__btn-create" [disabled]="newUserForm.invalid">Crear</button>
+        <section class="card-actions block justify-content-center" >
+          <button id="user-create__btn-create" >Crear</button>
         </section>
       </form>
     </div>
