--- a/src/app/feature/users/list-users/list-users.component.html
+++ b/src/app/feature/users/list-users/list-users.component.html
@@ -13,8 +13,8 @@
         <i class="material-icons mr-5">search</i>
         <input id="user-list__filter" type="text" class="white large outlined mb-10" placeholder="Name" [(ngModel)]="searchTerm">
     </section>
-      <div class="card w-50 mx-auto pb-30">
-        <table id="user-list__table">
+      <div class="card pb-30 ">
+        <table id="user-list__table" class="h8k-table h8k-table-striped h8k-table-bordered">
           <thead>
             <tr>
               <th class="sortable">Image</th>
@@ -25,11 +25,11 @@
           </thead>
           <tbody>
             <tr *ngFor="let user of users | filterUserByName: searchTerm; index as i" id="user-list__table-item-{{i}} ">
-              <td id="user-list__table-item-{{i}}-avatar"><img [src]="user.avatar" /></td>
-              <td id="user-list__table-item-{{i}}-first_name">{{ user.first_name }} {{ user.last_name }}</td> 
+              <td ><img  id="user-list__table-item-{{i}}-avatar" [src]="user.avatar" /></td>
+              <td id="user-list__table-item-{{i}}-first_name">{{ user.first_name }}</td> 
               <td id="user-list__table-item-{{i}}-email">{{ user.email }}</td>
               <td>
-                <button id="user-list__table-item-{{i}}-btn-delete" class="icon-only large danger" (click)="deteleUser(user)">
+                <button id="user-list__table-item-{{i}}-btn-delete" class="icon-only large danger"  (click)="deteleUser(user)">
                     <i class="material-icons">delete</i>
                 </button>
             </tr>
