Revert "adjusting functionalities by test"
This reverts commit c3b99c3bae863f81d849e02b06bde34f795623e9.

--- a/src/app/feature/users/nav-bar/nav-bar.component.html
+++ b/src/app/feature/users/nav-bar/nav-bar.component.html
@@ -19,3 +19,6 @@
     </a>
   </div>
 </nav>
+<div *ngIf="showAlert.isOpen" class="alert" [ngClass]="showAlert.type" >
+  {{showAlert.message}}
+</div>
