--- a/src/app/feature/users/create-user/create-user.component.html
+++ b/src/app/feature/users/create-user/create-user.component.html
@@ -2,7 +2,6 @@
   Recuerde conservar los id, no deben ser modificados
   ids = user-create__name, user-create__name-error, user-create__job, user-create__job-error, user-create__btn-create
 -->
-
 <div class="card">
   <section class="card-text">
     <h3 class="mt-0 mb-0 block justify-content-center flex mb-15" >Nuevo Usuario</h3>
@@ -12,33 +11,31 @@
           <input
             id="user-create__name"
             type="text"
-            [ngClass]="getName.hasError('required') ? 'white large error' : 'white large '"
+            [ngClass]="showErrorName ? 'white large error' : 'white large '"
             placeholder="Ingrese nombre"
             formControlName="name"
           />
           <div  class="form-hint error-text mt-5"  
           id="user-create__name-error" 
-          *ngIf="getName.hasError('required')">
-          Name is required
-        </div>
+          *ngIf="showErrorName">{{errorMessageName}}</div>
         </section>
         <section class="layout-column align-items-center justify-content-center  mb-10">
           <input
             id="user-create__job"
             type="text"
-            [ngClass]="getJop.hasError('required') ? 'white large error' : 'white large '"
+            [ngClass]="showErrorJob ? 'white large error' : 'white large '"
             placeholder="Ingrese el trabajo"
             formControlName="jop"
           />
           <div id="user-create__job-error" 
           class="form-hint error-text mt-5" 
-          *ngIf="getJop.hasError('required')">
-          Job is required
-        </div>
-        
+          *ngIf="showErrorJob">
+            {{errorMessageJob}}
+          </div>
+      
         </section>
         <section class="card-actions block justify-content-center" >
-          <button id="user-create__btn-create" [disabled]="newUserForm.invalid">Crear</button>
+          <button id="user-create__btn-create" >Crear</button>
         </section>
       </form>
     </div>
